--- a/web/package.json
+++ b/web/package.json
@@ -26,35 +26,35 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^17.0.0",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
+    "@angular-builders/custom-webpack": "^20.0.0",
+    "@angular-eslint/builder": "20.2.0",
+    "@angular-eslint/eslint-plugin": "20.2.0",
+    "@angular-eslint/eslint-plugin-template": "20.2.0",
+    "@angular-eslint/schematics": "20.2.0",
+    "@angular-eslint/template-parser": "20.2.0",
     "@types/mocha": "^10.0.6",
     "@types/sinon": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "mocha": "^10.2.0",
     "sinon": "^19.0.2",
     "workbox-cli": "^7.0.0"
   },
   "dependencies": {
-    "@angular-devkit/build-angular": "^17.0.7",
-    "@angular/cli": "^17.0.7",
-    "@angular/common": "^17.0.7",
-    "@angular/compiler": "^17.0.7",
-    "@angular/compiler-cli": "^17.0.7",
-    "@angular/core": "^17.0.7",
-    "@angular/forms": "^17.0.7",
-    "@angular/language-service": "^17.0.7",
-    "@angular/platform-browser": "^17.0.7",
-    "@angular/platform-browser-dynamic": "^17.0.7",
-    "@angular/router": "^17.0.7",
+    "@angular-devkit/build-angular": "^20.2.0",
+    "@angular/cli": "^20.2.0",
+    "@angular/common": "^20.2.1",
+    "@angular/compiler": "^20.2.1",
+    "@angular/compiler-cli": "^20.2.1",
+    "@angular/core": "^20.2.1",
+    "@angular/forms": "^20.2.1",
+    "@angular/language-service": "^20.2.1",
+    "@angular/platform-browser": "^20.2.1",
+    "@angular/platform-browser-dynamic": "^20.2.1",
+    "@angular/router": "^20.2.1",
     "@ionic/angular": "^7.6.1",
     "@ionic/angular-toolkit": "^10.0.0",
     "@types/deep-equal": "^1.0.4",
@@ -66,24 +66,24 @@
     "async-mutex": "^0.4.0",
     "copy-webpack-plugin": "^11.0.0",
     "deep-equal": "^2.2.3",
-    "dts-bundle-generator": "^9.0.0",
+    "dts-bundle-generator": "^9.5.1",
     "import-sort-style-eslint": "^6.0.0",
     "marked": "^9.0.0",
     "marked-directive": "^1.0.5",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
-    "ngx-markdown": "^17.1.1",
+    "ngx-markdown": "^19.1.1",
     "prettier": "^3.1.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "pwa-asset-generator": "^6.3.1",
     "raw-loader": "^4.0.2",
     "rxjs": "~7.8.1",
     "shelljs": "^0.8.5",
-    "ts-loader": "^9.5.1",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
-    "typedoc": "^0.25.4",
-    "typescript": "~5.2.2",
+    "tslib": "^2.8.1",
+    "typedoc": "^0.28.10",
+    "typescript": "^5.8.3",
     "url-parse": "^1.5.4",
     "uuid": "^9.0.1",
     "webpack-cli": "^5.1.4",
@@ -91,7 +91,7 @@
     "whatwg-fetch": "^3.6.20",
     "worker-timers": "^7.0.80",
     "yet-another-abortcontroller-polyfill": "^0.0.4",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.15.1"
   },
   "description": "CloudpilotEmu PWA",
   "prettier": {
