Seems ng20 generates invalid code with the webpack builder without AOT. Duh.

--- a/web/angular.json
+++ b/web/angular.json
@@ -50,7 +50,7 @@
               }
             ],
             "scripts": [],
-            "aot": false,
+            "aot": true,
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
