--- a/web/package.json
+++ b/web/package.json
@@ -1,123 +1,124 @@
 {
-  "name": "cloudpilot-emu",
-  "version": "1.10.11",
-  "author": "Christian Speckner <cnspeckn@googlemail.com>",
-  "license": "GPL-3.0-or-later",
-  "homepage": "https://cloudpilot-emu.github.io/",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "yarn run gen-revision && ng run app:build:production,ci",
-    "build-preview": "yarn run gen-revision && ng run app:build:production,preview,ci",
-    "generate-worker": "workbox generateSW ./workbox.config.js",
-    "build-embedded": "yarn run dts-bundle-embedded && yarn webpack --mode production -c webpack.embedded.config.js",
-    "start-embedded": "yarn webpack serve --mode development -c webpack.embedded.config.js",
-    "typedoc-embedded": "yarn typedoc",
-    "typedoc-embedded-watch": "yarn typedoc --watch --cleanOutputDir false",
-    "dist-embedded": "yarn build-embedded && yarn typedoc-embedded && node script/dist-embedded",
-    "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
-    "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
-    "test": "NODE_OPTIONS=$(node -e \"console.log(parseInt(process.version.match(/v(\\d+)/)[1], 10) >= 22 ? '--no-experimental-strip-types' : '')\") mocha common/test/*.ts",
-    "lint": "eslint common embedded pwa",
-    "pwa-icons": "pwa-asset-generator --opaque false --favicon --scrape --icon-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/icon.html pwa/src/assets-pwa",
-    "pwa-splash": "pwa-asset-generator --scrape --splash-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
-    "pwa-splash-dark": "pwa-asset-generator --scrape --splash-only --dark-mode -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
-    "pwa-assets": "yarn pwa-icons && yarn pwa-splash && yarn pwa-splash-dark && prettier -w --parser html pwa/src/index.html"
-  },
-  "private": true,
-  "devDependencies": {
-    "@angular-builders/custom-webpack": "^20.0.0",
-    "@angular-eslint/builder": "20.2.0",
-    "@angular-eslint/eslint-plugin": "20.2.0",
-    "@angular-eslint/eslint-plugin-template": "20.2.0",
-    "@angular-eslint/schematics": "20.2.0",
-    "@angular-eslint/template-parser": "20.2.0",
-    "@types/mocha": "^10.0.6",
-    "@types/sinon": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "mocha": "^10.2.0",
-    "sinon": "^19.0.2",
-    "workbox-cli": "^7.0.0"
-  },
-  "dependencies": {
-    "@angular-devkit/build-angular": "^20.2.0",
-    "@angular/cli": "^20.2.0",
-    "@angular/common": "^20.2.1",
-    "@angular/compiler": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.1",
-    "@angular/core": "^20.2.1",
-    "@angular/forms": "^20.2.1",
-    "@angular/language-service": "^20.2.1",
-    "@angular/platform-browser": "^20.2.1",
-    "@angular/platform-browser-dynamic": "^20.2.1",
-    "@angular/router": "^20.2.1",
-    "@ionic/angular": "^7.6.1",
-    "@ionic/angular-toolkit": "^10.0.0",
-    "@types/deep-equal": "^1.0.4",
-    "@types/emscripten": "^1.39.10",
-    "@types/md5": "^2.3.5",
-    "@types/node": "^20.5.4",
-    "@types/url-parse": "^1.4.6",
-    "@types/uuid": "^9.0.7",
-    "async-mutex": "^0.4.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "deep-equal": "^2.2.3",
-    "dts-bundle-generator": "^9.5.1",
-    "import-sort-style-eslint": "^6.0.0",
-    "marked": "^9.0.0",
-    "marked-directive": "^1.0.5",
-    "md5": "^2.3.0",
-    "microevent.ts": "^0.2.1",
-    "ngx-markdown": "^20.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-import-sort": "^0.0.7",
-    "pwa-asset-generator": "^6.3.1",
-    "raw-loader": "^4.0.2",
-    "rxjs": "~7.8.1",
-    "shelljs": "^0.8.5",
-    "ts-loader": "^9.5.4",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "typedoc": "^0.28.10",
-    "typescript": "~5.8.3",
-    "url-parse": "^1.5.4",
-    "uuid": "^9.0.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
-    "whatwg-fetch": "^3.6.20",
-    "worker-timers": "^7.0.80",
-    "yet-another-abortcontroller-polyfill": "^0.0.4",
-    "zone.js": "~0.15.1"
-  },
-  "description": "CloudpilotEmu PWA",
-  "prettier": {
-    "printWidth": 120,
-    "tabWidth": 4,
-    "singleQuote": true,
-    "parser": "typescript",
-    "overrides": [
-      {
-        "files": "*.page.html",
-        "options": {
-          "parser": "angular"
+    "name": "cloudpilot-emu",
+    "version": "1.10.11",
+    "author": "Christian Speckner <cnspeckn@googlemail.com>",
+    "license": "GPL-3.0-or-later",
+    "homepage": "https://cloudpilot-emu.github.io/",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "yarn run gen-revision && ng run app:build:production,ci",
+        "build-preview": "yarn run gen-revision && ng run app:build:production,preview,ci",
+        "generate-worker": "workbox generateSW ./workbox.config.js",
+        "build-embedded": "yarn run dts-bundle-embedded && yarn webpack --mode production -c webpack.embedded.config.js",
+        "start-embedded": "yarn webpack serve --mode development -c webpack.embedded.config.js",
+        "typedoc-embedded": "yarn typedoc",
+        "typedoc-embedded-watch": "yarn typedoc --watch --cleanOutputDir false",
+        "dist-embedded": "yarn build-embedded && yarn typedoc-embedded && node script/dist-embedded",
+        "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
+        "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
+        "test": "NODE_OPTIONS=$(node -e \"console.log(parseInt(process.version.match(/v(\\d+)/)[1], 10) >= 22 ? '--no-experimental-strip-types' : '')\") mocha common/test/*.ts",
+        "lint": "eslint common embedded pwa",
+        "prettier": "prettier -w --parser angular 'pwa/src/**/*.html' && prettier -w 'pwa/src/**/*.ts' 'embedded/**/*.ts' 'common/**/*.ts' 'script/**/*.js' && prettier -w --parser html 'embedded/**/*.html'",
+        "pwa-icons": "pwa-asset-generator --opaque false --favicon --scrape --icon-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/icon.html pwa/src/assets-pwa",
+        "pwa-splash": "pwa-asset-generator --scrape --splash-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
+        "pwa-splash-dark": "pwa-asset-generator --scrape --splash-only --dark-mode -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
+        "pwa-assets": "yarn pwa-icons && yarn pwa-splash && yarn pwa-splash-dark && prettier -w --parser html pwa/src/index.html"
+    },
+    "private": true,
+    "devDependencies": {
+        "@angular-builders/custom-webpack": "^20.0.0",
+        "@angular-eslint/builder": "20.2.0",
+        "@angular-eslint/eslint-plugin": "20.2.0",
+        "@angular-eslint/eslint-plugin-template": "20.2.0",
+        "@angular-eslint/schematics": "20.2.0",
+        "@angular-eslint/template-parser": "20.2.0",
+        "@types/mocha": "^10.0.6",
+        "@types/sinon": "^17.0.3",
+        "@typescript-eslint/eslint-plugin": "^8.40.0",
+        "@typescript-eslint/parser": "^8.40.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "mocha": "^10.2.0",
+        "sinon": "^19.0.2",
+        "workbox-cli": "^7.0.0"
+    },
+    "dependencies": {
+        "@angular-devkit/build-angular": "^20.2.0",
+        "@angular/cli": "^20.2.0",
+        "@angular/common": "^20.2.1",
+        "@angular/compiler": "^20.2.1",
+        "@angular/compiler-cli": "^20.2.1",
+        "@angular/core": "^20.2.1",
+        "@angular/forms": "^20.2.1",
+        "@angular/language-service": "^20.2.1",
+        "@angular/platform-browser": "^20.2.1",
+        "@angular/platform-browser-dynamic": "^20.2.1",
+        "@angular/router": "^20.2.1",
+        "@ionic/angular": "^7.6.1",
+        "@ionic/angular-toolkit": "^10.0.0",
+        "@types/deep-equal": "^1.0.4",
+        "@types/emscripten": "^1.39.10",
+        "@types/md5": "^2.3.5",
+        "@types/node": "^20.5.4",
+        "@types/url-parse": "^1.4.6",
+        "@types/uuid": "^9.0.7",
+        "async-mutex": "^0.4.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "deep-equal": "^2.2.3",
+        "dts-bundle-generator": "^9.5.1",
+        "import-sort-style-eslint": "^6.0.0",
+        "marked": "^9.0.0",
+        "marked-directive": "^1.0.5",
+        "md5": "^2.3.0",
+        "microevent.ts": "^0.2.1",
+        "ngx-markdown": "^20.0.0",
+        "prettier": "^3.1.1",
+        "prettier-plugin-import-sort": "^0.0.7",
+        "pwa-asset-generator": "^6.3.1",
+        "raw-loader": "^4.0.2",
+        "rxjs": "~7.8.1",
+        "shelljs": "^0.8.5",
+        "ts-loader": "^9.5.4",
+        "ts-node": "^10.9.2",
+        "tslib": "^2.8.1",
+        "typedoc": "^0.28.10",
+        "typescript": "~5.8.3",
+        "url-parse": "^1.5.4",
+        "uuid": "^9.0.1",
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-server": "^5.2.2",
+        "whatwg-fetch": "^3.6.20",
+        "worker-timers": "^7.0.80",
+        "yet-another-abortcontroller-polyfill": "^0.0.4",
+        "zone.js": "~0.15.1"
+    },
+    "description": "CloudpilotEmu PWA",
+    "prettier": {
+        "printWidth": 120,
+        "tabWidth": 4,
+        "singleQuote": true,
+        "parser": "typescript",
+        "overrides": [
+            {
+                "files": "*.page.html",
+                "options": {
+                    "parser": "angular"
+                }
+            },
+            {
+                "files": "*.component.html",
+                "options": {
+                    "parser": "angular"
+                }
+            }
+        ]
+    },
+    "importSort": {
+        ".js, .jsx, .ts, .tsx": {
+            "style": "eslint",
+            "parser": "typescript"
         }
-      },
-      {
-        "files": "*.component.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
-  "importSort": {
-    ".js, .jsx, .ts, .tsx": {
-      "style": "eslint",
-      "parser": "typescript"
     }
-  }
 }
