--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -77,7 +77,9 @@
               "Component"
             ]
           }
-        ]
+        ],
+        "@angular-eslint/prefer-standalone": "off",
+        "@angular-eslint/prefer-inject": "off"
       }
     },
     {
