--- a/web/package.json
+++ b/web/package.json
@@ -35,13 +35,15 @@
         "@angular-eslint/template-parser": "20.2.0",
         "@types/mocha": "^10.0.6",
         "@types/sinon": "^17.0.3",
-        "@typescript-eslint/eslint-plugin": "^8.40.0",
-        "@typescript-eslint/parser": "^8.40.0",
-        "eslint": "^8.57.0",
+        "@typescript-eslint/eslint-plugin": "^8.42.0",
+        "@typescript-eslint/parser": "^8.42.0",
+        "angular-eslint": "^20.2.0",
+        "eslint": "^9.34.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "mocha": "^11.7.1",
         "sinon": "^21.0.0",
+        "typescript-eslint": "^8.42.0",
         "workbox-cli": "^7.0.0"
     },
     "dependencies": {
