--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,59 +1,37 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "module": "es2020",
-    "moduleResolution": "bundler",
-    "importHelpers": true,
-    "target": "ES2022",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "noImplicitOverride": true,
-    "strict": true,
-    "lib": [
-      "es2020",
-      "dom"
-    ],
-    "paths": {
-      "@common/*": [
-        "common/*"
-      ],
-      "@native/*": [
-        "../src/cloudpilot/*"
-      ],
-      "@native-fstools/*": [
-        "../src/fstools/*"
-      ],
-      "@native-vfs/*": [
-        "../src/vfs/*"
-      ],
-      "@native-common/*": [
-        "../src/common/*"
-      ],
-      "@pwa/*": [
-        "pwa/src/app/*"
-      ],
-      "@embedded/*": [
-        "embedded/src/*"
-      ],
-      "@assets/*": [
-        "pwa/src/assets/*"
-      ],
-      "@root/*": [
-        "../*"
-      ]
+    "compileOnSave": false,
+    "compilerOptions": {
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "downlevelIteration": true,
+        "experimentalDecorators": true,
+        "module": "es2020",
+        "moduleResolution": "bundler",
+        "importHelpers": true,
+        "target": "ES2022",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "noImplicitOverride": true,
+        "strict": true,
+        "lib": ["es2020", "dom"],
+        "paths": {
+            "@common/*": ["common/*"],
+            "@native/*": ["../src/cloudpilot/*"],
+            "@native-fstools/*": ["../src/fstools/*"],
+            "@native-vfs/*": ["../src/vfs/*"],
+            "@native-common/*": ["../src/common/*"],
+            "@pwa/*": ["pwa/src/app/*"],
+            "@assets/*": ["pwa/src/assets/*"],
+            "@root/*": ["../*"],
+        },
+        "useDefineForClassFields": false,
     },
-    "useDefineForClassFields": false
-  },
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "strictTemplates": true
-  }
+    "angularCompilerOptions": {
+        "fullTemplateTypeCheck": true,
+        "strictInjectionParameters": true,
+        "strictTemplates": true,
+    },
 }
