--- a/web/pwa/tsconfig.app.json
+++ b/web/pwa/tsconfig.app.json
@@ -1,21 +1,11 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": []
-  },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "../common/**/*.ts",
-    "../common/**/*.d.ts",
-  ],
-  "exclude": [
-    "src/**/*.spec.ts",
-    "../common/test/*.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "./out-tsc/app",
+        "lib": ["es2020", "dom"],
+        "types": [],
+    },
+    "files": ["src/main.ts", "src/polyfills.ts"],
+    "include": ["src/**/*.ts", "src/**/*.d.ts", "../common/**/*.ts", "../common/**/*.d.ts"],
+    "exclude": ["src/**/*.spec.ts", "../common/test/*.ts", "../common/**/*.worker.ts", "src/**/*.worker.ts"],
 }
