--- a/web/package.json
+++ b/web/package.json
@@ -66,6 +66,7 @@
         "@types/emscripten": "^1.39.10",
         "@types/md5": "^2.3.5",
         "@types/node": "^24.3.0",
+        "@types/setimmediate": "^1.0.4",
         "@types/url-parse": "^1.4.6",
         "@types/uuid": "^10.0.0",
         "async-mutex": "^0.5.0",
@@ -80,6 +81,7 @@
         "pwa-asset-generator": "^8.1.1",
         "raw-loader": "^4.0.2",
         "rxjs": "~7.8.1",
+        "setimmediate": "^1.0.5",
         "shelljs": "^0.10.0",
         "ts-loader": "^9.5.4",
         "ts-node": "^10.9.2",
