--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -24,6 +24,8 @@ jobs:
         with:
           version: ${{env.EM_VERSION}}
           actions-cache-folder: ${{env.EM_CACHE_FOLDER}}
+      - name: Setup wabt
+        run: sudo apt-get install wabt
       - name: Build wasm
         run: make -Csrc -j2 emscripten WASMOPT="$EMSDK/upstream/bin/wasm-opt"
       - name: Setup node
